; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/extr_ftl.c_ftl_getgeo.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/extr_ftl.c_ftl_getgeo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_blktrans_dev = type { i32 }
%struct.hd_geometry = type { i32, i32, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@SECTOR_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtd_blktrans_dev*, %struct.hd_geometry*)* @ftl_getgeo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ftl_getgeo(%struct.mtd_blktrans_dev* %0, %struct.hd_geometry* %1) #0 {
  %3 = alloca %struct.mtd_blktrans_dev*, align 8
  %4 = alloca %struct.hd_geometry*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  store %struct.mtd_blktrans_dev* %0, %struct.mtd_blktrans_dev** %3, align 8
  store %struct.hd_geometry* %1, %struct.hd_geometry** %4, align 8
  %7 = load %struct.mtd_blktrans_dev*, %struct.mtd_blktrans_dev** %3, align 8
  %8 = bitcast %struct.mtd_blktrans_dev* %7 to i8*
  %9 = bitcast i8* %8 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %5, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @le32_to_cpu(i32 %13)
  %15 = load i32, i32* @SECTOR_SIZE, align 4
  %16 = sdiv i32 %14, %15
  store i32 %16, i32* %6, align 4
  %17 = load %struct.hd_geometry*, %struct.hd_geometry** %4, align 8
  %18 = getelementptr inbounds %struct.hd_geometry, %struct.hd_geometry* %17, i32 0, i32 0
  store i32 1, i32* %18, align 4
  %19 = load %struct.hd_geometry*, %struct.hd_geometry** %4, align 8
  %20 = getelementptr inbounds %struct.hd_geometry, %struct.hd_geometry* %19, i32 0, i32 1
  store i32 8, i32* %20, align 4
  %21 = load i32, i32* %6, align 4
  %22 = ashr i32 %21, 3
  %23 = load %struct.hd_geometry*, %struct.hd_geometry** %4, align 8
  %24 = getelementptr inbounds %struct.hd_geometry, %struct.hd_geometry* %23, i32 0, i32 2
  store i32 %22, i32* %24, align 4
  ret i32 0
}

declare dso_local i32 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
